added screenshots with horizontal scroll view

--- a/GPG/src/main/res/layout/fragment_game_info.xml
+++ b/GPG/src/main/res/layout/fragment_game_info.xml
@@ -188,23 +188,27 @@
                     android:textColor="@color/colorAccent"
                     android:textSize="12dp" />
 
-                <HorizontalScrollView
-                    android:id="@+id/screenshotsScrollView"
-                    android:layout_below="@id/screenshotsborder"
-                    android:layout_width="match_parent"
-                    android:layout_height="72dp"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="4dp"
-                    android:layout_marginRight="4dp"
-                    android:background="@android:color/black">
-                    <LinearLayout
-                        android:id="@+id/screenshotsLayout"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal"
-                        android:paddingTop="2dp"/>
-                </HorizontalScrollView>
+                    <HorizontalScrollView
+                        android:id="@+id/screenshotsScrollView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_below="@id/screenshotsborder">
+
+                        <LinearLayout
+                            android:id="@+id/screenshotsLayout"
+                            android:background="@android:color/black"
+                            android:layout_width="match_parent"
+                            android:layout_height="75dp"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"/>
+
+                    </HorizontalScrollView>
+
+
 <!--                <ImageView
                     android:id="@+id/screenshots"
                     android:layout_below="@+id/screenshotsborder"
